--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,22 @@ body {
     z-index: 1000;
 }
 
-.logo-header-img {
-    height: 60px;
-    border-radius: 12px;
+/* Logo */
+.header-logo {
+    font-size: 26px;
+    font-weight: bold;
+    color: white;
 }
 
-.logo-header-img:hover {
-    transform: scale(1.05);
+.header-logo a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+.header-logo a:hover {
+    text-decoration: none; /* Uklanja underline na hover */
+    color: inherit; /* Sprečava promenu boje na hover */
 }
 
 .nav-menu {
